--- a/freezeColumns/style/style.css
+++ b/freezeColumns/style/style.css
@@ -76,4 +76,19 @@ table:first-of-type tbody tr th:nth-child(2){
  
  
 }
+.form{
+  width: 80%;
+  background: linear-gradient(to right, white, 	#808080);
+  padding: 5px;
+ 
+  border: 2px solid  black;
+  border-radius: 10px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  top: 50%;
+}
+.button-box{
+  
+}
 
