--- a/disable/style/style.css
+++ b/disable/style/style.css
@@ -12,3 +12,11 @@ td.disabled {
     background-color: bisque;
     border:solid 1px blue;
   }
+
+
+  .disabled {
+    pointer-events: none;
+    opacity: 0.5;
+    background-color: bisque;
+    border:solid 1px blue;
+  }
