--- a/transparentNavbar/style/style.css
+++ b/transparentNavbar/style/style.css
@@ -210,3 +210,74 @@ width: 50%;
     width: 100%;
     padding: 0.5rem;
 }
+.social{
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    bottom: 50px;
+    position: absolute;
+    text-align: center;
+   
+}
+.fb{
+    width: 25%;
+    height: 50px;
+    float: left;
+    text-align: center;
+    padding: 7%;
+}
+.fb a{
+    color: white;
+    text-decoration: none;
+    display: inline-block;
+    text-align: center;
+}
+.fb:hover{
+    background-color: #4668b3;
+}
+.yt{
+    width: 25%;
+    height: 50px;
+    float: left;
+    display: block;
+    padding: 7%;
+}
+.yt a{
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+.yt:hover{
+    background-color: #d94348;
+}
+.tw{
+    width: 25%;
+    height: 50px;
+    float: left;
+    padding: 7%;
+}
+.tw a{
+    color: white;
+    text-decoration: none;
+    
+}
+.tw:hover{
+    background-color: #6441a5;
+}
+.am{
+    width: 25%;
+    height: 50px;
+    float: left;
+    padding: 7%;
+}
+.am a{
+    color: white;
+    text-decoration: none;
+}
+.am:hover{
+    background-color: #e47911;
+}
