--- a/transparentNavbar/style/style.css
+++ b/transparentNavbar/style/style.css
@@ -135,6 +135,17 @@ label #end:hover{
      text-align: center;
      
  }
+ .inputek button img{  
+  width: 20px;
+    }
+    .inputek button {  
+        border: 0;
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+        cursor:pointer;
+        
+         }
  .input-field:is(:focus, :valid) {
     font-size: 18px;
     font-weight: bolder;
@@ -280,4 +291,7 @@ width: 50%;
 }
 .am:hover{
     background-color: #e47911;
+}
+.inputek{
+  
 }
