--- a/transparentNavbar/style/style.css
+++ b/transparentNavbar/style/style.css
@@ -144,7 +144,7 @@ label #end:hover{
         width: 30px;
         height: 30px;
         cursor:pointer;
-        
+        background-color: black;
          }
  .input-field:is(:focus, :valid) {
     font-size: 18px;
@@ -155,6 +155,9 @@ label #end:hover{
 .line{
 text-align: right;
 width: 50%;
+}
+.line i{
+    font-size: 24px;
 }
 .line i:hover{
     color: aqua;
